--- a/democratos/CreateYourLaws/static/css/style.css
+++ b/democratos/CreateYourLaws/static/css/style.css
@@ -1,3 +1,4 @@
+
 html{
 	margin: 0;
     padding: 0;
@@ -53,7 +54,6 @@ main{
 	border-style: solid;
 	border-radius: 8px;
 	border-spacing: 5px;
-	padding: 10px;
 }
 
 
@@ -97,9 +97,6 @@ button{
 	cursor: pointer;
 }
 
-.butopn{
-	background: -moz-linear-gradient(110deg,#f98b8b 50%,#93f99a 50%);
-}
 
 .butexp {
 	background-color: #f2cf7b;
@@ -126,7 +123,6 @@ button{
 	list-style: none;
 	border-collapse: collapse;
 	border: 1px solid black;
-	padding: 8px;
 	margin-left: 1%;
 	margin-right: 1%;
 }
@@ -150,11 +146,12 @@ button{
 	border-color: #38a940;
 	border-style: solid;
 	border-radius: 8px;
-	border-spacing: 10px;
-	padding: 10px;
+	border-spacing: 10px;;
 	display: inline-block;
-	margin: 0.4%;
-	width: 45.5%;
+	width: 37.5%;
+	margin: 1%;
+	padding: 1%;
+	clear: both;
 }
 
 .negopinion
@@ -165,19 +162,21 @@ button{
 	border-style: solid;
 	border-radius: 8px;
 	border-spacing: 10px;
-	padding: 10px;
 	display: inline-block;
 	vertical-align: top;
-	margin: 0.4%;
-	width: 45.5%;
+	width: 37.5%;
+	margin: 1%;
+	padding: 1%;
+	clear:both;
 }
 
 section form{
-	padding: 4%;
+	padding: 2%;
 	text-align: left;
 	list-style: none;
 }
 
+/*
 #opform{
 	background: -moz-linear-gradient(110deg,#f98b8b 50%,#93f99a 50%);
 	border-style: solid;
@@ -187,7 +186,7 @@ section form{
 
 #opform ul{
 	list-style: none;
-}
+} */
 
 .law_text
 {	
@@ -199,8 +198,6 @@ section form{
 	border-radius: 8px;
 	margin: 1%;
 	padding: 2%;
-	padding-left: 4%;
-	padding-right: 4%;
 }
 
 .proposition
