--- a/democratos/CreateYourLaws/static/css/style.css
+++ b/democratos/CreateYourLaws/static/css/style.css
@@ -25,15 +25,23 @@ header{
 
 nav{
 	float: left;
-	width: 17%;
-	height: 900px;
+	width: 15%;
+	height: 700px;
 	display: none;
 	background: #f0f0f0;
 }
 
+aside{
+	display: inline-block;
+	float: right;
+	width:15%;
+	height: 900px;
+	background: #6495ED;
+}
+
 main{
 	display: inline-block;
-	width: 83%;
+	width: 70%;
 }
 
 #intro{
@@ -77,6 +85,14 @@ section{
 	width: 98%;
 }
 
+div td {
+	position: relative;
+    top: 1em;
+    bottom: 1em;
+    left: 1em;
+    right: 1em;
+}
+
 section p {
 	text-align: left;
 }
@@ -91,10 +107,11 @@ section table{
 
 button{
 	padding: 1.5%;
-	margin: 2%;
+	margin: 4%;
 	border-radius: 30px;
 	color: black;
 	cursor: pointer;
+	text-align: center;
 }
 
 
@@ -119,18 +136,24 @@ button{
 	border-color: #378ddd;
 }
 
+.butopp{
+	background-color: #93f99a;
+	border-color: #38a940;
+}
+
+.butopn{
+	background-color: #f98b8b;
+	border-color: #f92222;
+}
+
 .law_text table, th, td{
 	list-style: none;
-	border-collapse: collapse;
-	border: 1px solid black;
-	margin-left: 1%;
-	margin-right: 1%;
 }
- 
+
 .disclaim
 {
 	background-color: #F9AC68;
-	border-width: 4px;
+	border-width: 2px;
 	border-color: #FC540B;
 	border-style: solid;
 	border-radius: 8px;
@@ -139,22 +162,34 @@ button{
 	padding: 10px;
 }
 
-.posopinion
+.Bigposopinion
 {
 	background-color: #93f99a;
 	border-width: 4px;
 	border-color: #38a940;
 	border-style: solid;
 	border-radius: 8px;
-	border-spacing: 10px;;
 	display: inline-block;
-	width: 37.5%;
+	width: 44.5%;
 	margin: 1%;
 	padding: 1%;
 	clear: both;
 }
 
-.negopinion
+.posopinion
+{
+	background-color: #93f99a;
+	border-width: 2px;
+	border-color: #38a940;
+	border-style: solid;
+	border-radius: 8px;
+	display: inline-block;
+	width: 100%;
+	margin: 1%;
+	padding: 2%;
+}
+
+.Bignegopinion
 {
 	background-color: #f98b8b;
 	border-width: 4px;
@@ -164,10 +199,49 @@ button{
 	border-spacing: 10px;
 	display: inline-block;
 	vertical-align: top;
-	width: 37.5%;
+	width: 44.5%;
+	margin: 1%;
+	padding: 1%;
+}
+
+.negopinion
+{
+	background-color: #f98b8b;
+	border-width: 2px;
+	border-color: #f92222;
+	border-style: solid;
+	border-radius: 8px;
+	border-spacing: 10px;
+	display: inline-block;
+	width: 100%;
+	vertical-align: top;
 	margin: 1%;
 	padding: 1%;
 	clear:both;
+}
+
+.Bigproposition
+{
+	background-color: #7ab3e7;
+	border-width: 4px;
+	border-color: #378ddd;
+	border-style: solid;
+	border-radius: 8px;
+	border-spacing: 10px;
+	margin: 1%;
+	padding: 10px;
+}
+
+.proposition
+{
+	background-color: #7ab3e7;
+	border-width: 2px;
+	border-color: #378ddd;
+	border-style: solid;
+	border-radius: 8px;
+	border-spacing: 10px;
+	margin: 1%;
+	padding: 10px;
 }
 
 section form{
@@ -190,7 +264,6 @@ section form{
 
 .law_text
 {	
-	text-align: left;
 	background-color: #d6d5d4;
 	border-width: 4px;
 	border-color: #909090;
@@ -200,17 +273,6 @@ section form{
 	padding: 2%;
 }
 
-.proposition
-{
-	background-color: #7ab3e7;
-	border-width: 4px;
-	border-color: #378ddd;
-	border-style: solid;
-	border-radius: 8px;
-	border-spacing: 10px;
-	margin: 1%;
-	padding: 10px;
-}
 
 .explaination
 {
