--- a/democratos/CreateYourLaws/templates/GetReflection.html
+++ b/democratos/CreateYourLaws/templates/GetReflection.html
@@ -33,7 +33,6 @@
 {% block content %}
 
 {% autoescape off %}
-
 <!--############################################################################################
 ##################################      The Reflection       ###################################
 #############################################################################################-->
@@ -130,14 +129,15 @@
                     <br>
                     <br>
                     <br>
-                    <article class="posopinion">
+                    <hr>
+                    <article class="Bigposopinion">
                         <h2>Points positifs</h2>
                         <div id="posopdiv">
                             <table>
                                 <tbody>
                                     {% for x in listposop %}
                                         <tr>
-                                            <td> 
+                                            <td class="posopinion"> 
                                                 <div class='clickable GetReflection' name='opn:{{x.id}}'>
                                                 {% if x.title%}
                                                     {{x.title}} <br/>
@@ -146,48 +146,45 @@
                                                     {{x.text_op}} <br/>
                                                 {% endif %}
                                                 </div>
-                                                <p class="count">
-                                                <img src="{% static 'icons/dis.png' %}" alt="dis" class="icn"> {{x.nb_dis}}
+                                                <hr>
+                                                <div class="count">
                                                 <img src="{% static 'icons/qst.png' %}" alt="?" class="icn"> {{x.nb_q}}
                                                 <img src="{% static 'icons/exp.png' %}" alt="com" class="icn"> {{x.nb_exp}}
-                                                </p>
-                                                <p class="vote">
+                                                </div>
+                                                <div class="vote">
                                                 <input type="image" src="{% static 'icons/thumbs_up.png' %}" class="UP" name="opn:{{x.id}}" value="UP"/>
                                                 <input type="image" src="{% static 'icons/thumbs_down.png' %}" class="DOWN" name="opn:{{x.id}}" value="DOWN"/>
                                                     note:
                                                 <canvas id="donopn{{x.id}}" name="{{x.approval_ratio}}" class="donut"></canvas>
-                                                <p>
+                                                </div>
                                                 {% comment %}
                                                 <var id="opn{{x.id}}">{{x.approval_ratio|floatformat:2}}</var> % d'approbation</td> {% endcomment %}
                                         </tr>
                                     {% empty %}
-                                        Aucun point positif n'a été relevé pour le moment sur cette réflection.<br>
-                                        Soyez le premier à en donner un!
+                                        Aucun point positif n'a été relevé pour le moment sur cette réflection. Soyez le premier à en donner un!
                                     {% endfor %}
                                 </tbody>
                             </table>
-                            <p id="posopform{{typeref}}{{id_ref}}">
-                                <button class="butop+" type="button">Ajouter un point positif ou <br> négatif sur cette loi</button>
-                                <form action="{% url 'PostReflection'%}" method="post" class="opnform" name="loi:op-:{{ref.id_ref}}">
-                                    {{ opform.as_p }}
-                                    <input type="hidden" name="typeform" value="op+f">
-                                    <input type="hidden" name="typeref" value="{{typeref}}">
-                                    <input type="hidden" name="ref_id" value="{{ref.id}}">
-                                    <!-- <input type="hidden" name="ref_id" value="{{ref.id}}"> -->
-                                    <button type="submit" class="posopinion" name="btnop+form">Poster le point de vue</button>
-                                </form>
-                            </p>  
+                        <div id='pos{{x.id}}comments'>
+                            <button class="butopp" type="button">Ajouter un point positif ou <br> négatif sur cette loi</button>
+                            <form action="{% url 'PostReflection'%}" method="post" id="oppform" name="loi:opp:{{ref.id}}">
+                                {{ oppform.as_p }}
+                                <input type="hidden" name="typeform" value="oppf">
+                                <input type="hidden" name="typeref" value="{{typeref}}">
+                                <input type="hidden" name="ref_id" value="{{ref.id}}">
+                                <!-- <input type="hidden" name="ref_id" value="{{ref.id}}"> -->
+                                <button type="submit" class="posopinion" name="btnoppform">Poster le point de vue</button>
+                            </form>
                         </div>    
                     </article>
 
-                    <article class="negopinion">
+                    <article class="Bignegopinion">
                         <h2>Points négatifs</h2>
-                        <div id="negopdiv">
                             <table>
                                 <tbody>
                                     {% for x in listnegop %}
                                         <tr>
-                                            <td>
+                                            <td class="negopinion">
                                                 <div onclick="location.href='{% url 'reflection' 'opn' x.id %}'" class='clickable'>
                                                 {% if x.title%}
                                                     {{x.title}} <br/>
@@ -196,37 +193,35 @@
                                                     {{x.text_op}} <br/>
                                                 {% endif %}
                                                 </div>
-                                                <p class="count">
-                                                <img src="{% static 'icons/dis.png' %}" alt="dis" class="icn"> {{x.nb_dis}}
+                                                <hr>
+                                                <div class="count">
                                                 <img src="{% static 'icons/qst.png' %}" alt="?" class="icn"> {{x.nb_q}}
                                                 <img src="{% static 'icons/exp.png' %}" alt="com" class="icn"> {{x.nb_exp}}
-                                                </p>
-                                                <p class="vote">
+                                                </div>
+                                                <div class="vote">
                                                 <input type="image" src="{% static 'icons/thumbs_up.png' %}" class="UP" name="opn:{{x.id}}" value="UP"/>
                                                 <input type="image" src="{% static 'icons/thumbs_down.png' %}" class="DOWN" name="opn:{{x.id}}" value="DOWN"/>
                                                     note:
                                                 <canvas id="donopn{{x.id}}" name="{{x.approval_ratio}}" class="donut"></canvas>
-                                                </p>
+                                                </div>
                                                 {% comment %}
                                                 <var id="opn{{x.id}}">{{x.approval_ratio|floatformat:2}}</var> % d'approbation {% endcomment %}
                                             </td>
                                         </tr>
                                     {% empty %}
-                                        Aucun point négatif n'a été relevé pour le moment sur cette réflection.<br>
-                                        Soyez le premier à en donner un! 
+                                        Aucun point négatif n'a été relevé pour le moment sur cette réflection. Soyez le premier à en donner un! 
                                     {% endfor %}
                                 </tbody>
                             </table> 
-                            <p id="negopform{{typeref}}{{id_ref}}">
-                                <button class="butop-" type="button">Ajouter un point positif ou <br> négatif sur cette loi</button>
-                                <form action="{% url 'PostReflection'%}" method="post"  class="opnform" name="loi:op-:{{ref.id_ref}}">
-                                    {{ opform.as_p }}
-                                    <input type="hidden" name="typeform" value="op-f">
-                                    <input type="hidden" name="typeref" value="{{typeref}}">
-                                    <input type="hidden" name="ref_id" value="{{ref.id}}">
-                                    <button type="submit" class="negopinion" name="btnop-form">Poster le point de vue</button>
-                                </form>    
-                            </p>   
+                        <div id='neg{{x.id}}comments'>
+                            <button class="butopn" type="button">Ajouter un point positif ou <br> négatif sur cette loi</button>
+                            <form action="{% url 'PostReflection'%}" method="post"  id="opnform" name="loi:opn:{{ref.id}}">
+                                {{ opnform.as_p }}
+                                <input type="hidden" name="typeform" value="opnf">
+                                <input type="hidden" name="typeref" value="{{typeref}}">
+                                <input type="hidden" name="ref_id" value="{{ref.id}}">
+                                <button type="submit" class="negopinion" name="btnopnform">Poster le point de vue</button>
+                            </form>     
                         </div>    
                     </article>
                 {% endif %}
@@ -238,13 +233,13 @@
     {% if typeref == 'loi' or typeref == 'prp' %}
     <hr>
 
-        <section class="proposition" id="propsection">
+        <section class="Bigproposition" id="propsection">
             <h2>Autres propositions de lois pour cette réflection</h2>
             <table>
                 <tbody>
                     {% for x in listpropositions %}
                         <tr>
-                            <td>
+                            <td class="proposition" >
                                 <div class="IDB GetReflection" name="prp:{{x.id}}">
                                     {% if x.title %}
                                         <strong>{{x.title}}</strong> <br/>
@@ -253,18 +248,19 @@
                                         <strong>{{x.text_prop}}</strong> <br/>
                                     {% endif %}
                                 </div>
-                                <p class="count">
+                                <hr>
+                                <div class="count">
                                 <img src="{% static 'icons/qst.png' %}" alt="?" class="icn"> {{x.nb_q}}
                                 <img src="{% static 'icons/exp.png' %}" alt="com" class="icn"> {{x.nb_exp}} 
-                                <img src="{% static 'icons/opv2.png' %}" alt="op+" class="icn"> {{x.nb_posop}}
-                                <img src="{% static 'icons/opx2.png' %}" alt="op-" class="icn"> {{x.nb_negop}}
-                                </p>
-                                <p class="vote">
+                                <img src="{% static 'icons/opv2.png' %}" alt="opp" class="icn"> {{x.nb_posop}}
+                                <img src="{% static 'icons/opx2.png' %}" alt="opn" class="icn"> {{x.nb_negop}}
+                                </div>
+                                <div class="vote">
                                 <input type="image" src="{% static 'icons/thumbs_up.png' %}"  class="UP" name="prp:{{x.id}}" value="UP"/>
                                 <input type="image" src="{% static 'icons/thumbs_down.png' %}"  class="DOWN" name="prp:{{x.id}}" value="DOWN"/>
                                     note:
                                 <canvas id="donprp{{x.id}}" name="{{x.approval_ratio}}" class="donut"></canvas>
-                                </p>
+                                </div>
                             </td>                   
                         </tr>
                     {% empty %}
@@ -273,7 +269,7 @@
                     {% endfor %}
                 </tbody>
             </table> 
-        <div id='exp{{x.id}}comments'>
+        <div id='prp{{x.id}}comments'>
             <button class="butprp" type="button">Faire une autre proposition <br>  que cette loi</button>
                 <form action="{% url 'PostReflection'%}"  method="post" id="prpform">
                     {{ prpform.as_p }} 
@@ -311,12 +307,13 @@
                         {% else %}
                             <strong>{{x.text_q}}</strong> <br/>
                         {% endif %}
-                {% endif %}                    
-                <p class="count">
+                {% endif %}  
+                <hr>                  
+                <div class="count">
                     <img src="{% static 'icons/qst.png' %}" alt="?" class="icn"> {{x.nb_q}}
                     <img src="{% static 'icons/exp.png' %}" alt="com" class="icn"> {{x.nb_exp}} 
-                </p>
-                <p class="vote">
+                </div>
+                <div class="vote">
                 {% if x|isinst:'CreateYourLaws.models.Explaination' %}   
                     <input type="image" src="{% static 'icons/thumbs_up.png' %}"  class="UP" name="exp:{{x.id}}" value="UP"/>
                     <input type="image" src="{% static 'icons/thumbs_down.png' %}"  class="DOWN" name="exp:{{x.id}}" value="DOWN"/>
@@ -328,7 +325,7 @@
                     note:
                     <canvas id="donqst{{x.id}}" name="{{x.approval_ratio}}" class="donut"></canvas>
                 {% endif %}
-                </p>
+                </div>
                 <br>
                 <br>
                 <br>
