Trouble with ConfirmDialogBox --> Delete own ref

--- a/democratos/CreateYourLaws/static/css/style.css
+++ b/democratos/CreateYourLaws/static/css/style.css
@@ -415,3 +415,9 @@ section form{
 .error_message{
 	color: 	#b30000;
 }
+
+.DelOwnRef{
+	color: blue;
+	text-decoration: underline, bold;
+	text-align: right;
+}
