DeleteOwnRef function up!

--- a/democratos/CreateYourLaws/static/css/style.css
+++ b/democratos/CreateYourLaws/static/css/style.css
@@ -416,8 +416,8 @@ section form{
 	color: 	#b30000;
 }
 
-.DelOwnRef{
+.SmallMenu{
 	color: blue;
 	text-decoration: underline, bold;
-	text-align: right;
+	float: right;
 }
