--- a/democratos/CreateYourLaws/templates/GetReflection.html
+++ b/democratos/CreateYourLaws/templates/GetReflection.html
@@ -242,7 +242,7 @@
                             <td class="proposition" >
                                 {% if User == x.autor %}
                                     <div class="SmallMenu">
-                                       <ins class="DelOwnRef clickable " name="del:prp:{{x.id}}">supprimer</ins> / <ins class="ModifRef clickable " name="modif:prp:{{x.id}}">Modifier</ins> 
+                                       <ins class="DelOwnRef clickable " name="del:prp:{{x.id}}">supprimer</ins> / <ins class="ModifRef clickable " name="modif:prpf:{{x.id}}:typeref:id_ref">Modifier</ins> 
                                     </div>
                                     <br>
                                 {% endif %}
